클라이언트-서버 HTTP API 연동 구현
- CEP 패널에서 fetch POST /nasUpload 요청으로 items, projectPath 전송
- Express 서버에 /nasUpload POST 추가하여 JSON 바디 파싱 및 로직 처리
- evalScript 콜백을 Promise로 래핑하고 async/await 사용해 projectPath 비동기 수신 지원

--- a/morph_panel/index.html
+++ b/morph_panel/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/main.css" />
-  <title>Unity Inspector</title>
+  <title>Morph Animate Panel</title>
 </head>
 
 <body>
@@ -30,11 +30,13 @@
     <button id="nasUploadBtn">Nas Upload</button>
   </div>
   <!-- 라이브러리 -->
+  <!-- <script src="build.js"></script> -->
+  <!-- <script src="js/themeManager.js"></script> -->
   <script src="js/libs/CSInterface.js"> </script>
-  <script src="js/themeManager.js"></script>
-  <script src="build.js"></script>
+  <script src="js/libs/fileUtil.js"> </script>
+  <script src="js/libs/jsflCommands.js"> </script>
   <!-- 내 코드 -->
-  <script src="js/main.js"> </script>
+  <script src="js/index.js"> </script>
 </body>
 
 </html>
