클라-서버 나스 업로드
- 업로드 폴더명도 설정할 수 있도록 Input 추가
- uploadNas 호출 시 folderName도 전달하도록 수정

--- a/morph_panel/index.html
+++ b/morph_panel/index.html
@@ -15,6 +15,10 @@
       <label for="uploadNas">나스 업로드</label>
       <input type="checkbox" id="uploadNas" name="uploadNas" checked />
     </div>
+    <div>
+      <label for="uploadFolderName">업로드 폴더명</label>
+      <input type="text" id="folderName" name="uploadFolderName" placeholder="기본값은 xfl, fla 파일명입니다." style="width: 250px;"/>
+    </div>
     <div id="nasHeader">
       <h3>업로드 경로 목록</h3>
       <button id="addPathBtn">+ 경로 추가</button>
