--- a/morph_panel/client/localServer.html
+++ b/morph_panel/client/localServer.html
@@ -8,11 +8,12 @@
         const serverPath = `${__dirname}/server/main.js`;
 
         /**
-         * 실제 서버 모듈을 require 해서 run()을 호출하고
-         * 생성된 httpServer 인스턴스를 반환합니다.
-         */
+        * 실제 서버 모듈을 require 해서 run()을 호출하고
+        * 생성된 httpServer 인스턴스를 반환합니다.
+        */
         function createServerInstance() {
             // 캐시에서 지워서 항상 최신 코드를 로드
+
             const resolved = cep_node.require.resolve(serverPath);
             delete cep_node.require.cache[resolved];
 
@@ -29,6 +30,7 @@
                 localServer.close(() => {
                     console.log('🔒 Previous server closed');
                     // 포트가 완전히 해제된 후에 새로 시작
+
                     setTimeout(() => {
                         console.log('🚀 Starting new server instance');
                         localServer = createServerInstance();
@@ -44,11 +46,106 @@
         reloadServer();
 
     </script>
-    <title>Import Example App</title>
+
+    <title>local server</title>
+    <style>
+        #consoleToggle {
+            position: fixed;
+            bottom: 180px;
+            right: 20px;
+            padding: 6px 12px;
+            background: #333;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            z-index: 1000;
+        }
+
+        #consolePanel {
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            width: 500px;
+            height: 150px;
+            background: rgba(0, 0, 0, 0.9);
+            color: #0f0;
+            font-family: monospace;
+            font-size: 12px;
+            overflow-y: auto;
+            padding: 8px;
+            box-sizing: border-box;
+            display: none;
+            z-index: 999;
+        }
+
+        #consolePanel .log-entry {
+            margin: 2px 0;
+        }
+
+        #consolePanel .log-entry.error {
+            color: #f66;
+        }
+
+        #consolePanel .log-entry.warn {
+            color: #fc0;
+        }
+
+        #consolePanel .log-entry.info {
+            color: #6cf;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Local Server Test</h1>
+    <h1>Local Server</h1>
+    <button id="consoleToggle">콘솔 토글</button>
+    <div id="consolePanel"></div>
+
+    <script>
+        // 콘솔 기록용
+        (function () {
+            const panel = document.getElementById('consolePanel');
+            const toggle = document.getElementById('consoleToggle');
+
+            // 토글 동작
+            toggle.addEventListener('click', () => {
+                panel.style.display = panel.style.display === 'none' ? 'block' : 'none';
+            });
+
+            // 원본 콘솔 메서드 저장
+            const orig = {
+                log: console.log,
+                info: console.info,
+                warn: console.warn,
+                error: console.error
+            };
+
+            // 로그 출력 함수
+            function appendLog(level, args) {
+                const entry = document.createElement('div');
+                entry.className = 'log-entry ' + level;
+                const time = new Date().toLocaleTimeString();
+                entry.textContent = `[${time}] ${args.map(a =>
+                    typeof a === 'object' ? JSON.stringify(a) : a
+                ).join(' ')}`;
+                panel.appendChild(entry);
+                panel.scrollTop = panel.scrollHeight;
+            }
+
+            // 각 레벨별로 감싸기
+            ['log', 'info', 'warn', 'error'].forEach(level => {
+                console[level] = function (...args) {
+                    appendLog(level, args);
+                    orig[level].apply(console, args);
+                };
+            });
+
+            // uncaught error 포착
+            window.addEventListener('error', e => {
+                appendLog('error', [e.message + ' (' + e.filename + ':' + e.lineno + ')']);
+            });
+        })();
+    </script>
 </body>
 
 </html>
