--- a/morph_panel/index.html
+++ b/morph_panel/index.html
@@ -6,18 +6,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/main.css" />
   <title>Morph Animate Panel</title>
+  <style>
+    #consoleToggle {
+      position: fixed;
+      bottom: 180px;
+      right: 20px;
+      padding: 6px 12px;
+      background: #333;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      z-index: 1000;
+    }
+
+    #consolePanel {
+      position: fixed;
+      bottom: 0;
+      right: 0;
+      width: 500px;
+      height: 150px;
+      background: rgba(0, 0, 0, 0.9);
+      color: #0f0;
+      font-family: monospace;
+      font-size: 12px;
+      overflow-y: auto;
+      padding: 8px;
+      box-sizing: border-box;
+      display: none;
+      z-index: 999;
+    }
+
+    #consolePanel .log-entry {
+      margin: 2px 0;
+    }
+
+    #consolePanel .log-entry.error {
+      color: #f66;
+    }
+
+    #consolePanel .log-entry.warn {
+      color: #fc0;
+    }
+
+    #consolePanel .log-entry.info {
+      color: #6cf;
+    }
+  </style>
 </head>
 
 <body>
   <div class="inspector">
     <h2>Animate Extension</h2>
     <div>
-      <label for="uploadNas">나스 업로드</label>
-      <input type="checkbox" id="uploadNas" name="uploadNas" checked />
-    </div>
-    <div>
       <label for="uploadFolderName">업로드 폴더명</label>
-      <input type="text" id="folderName" name="uploadFolderName" placeholder="기본값은 xfl, fla 파일명입니다." style="width: 250px;"/>
+      <input type="text" id="folderName" name="uploadFolderName" placeholder="기본값은 xfl, fla 파일명입니다."
+        style="width: 250px;" />
     </div>
     <div id="nasHeader">
       <h3>업로드 경로 목록</h3>
@@ -33,6 +76,8 @@
     </div>
     <button id="nasUploadBtn">Nas Upload</button>
   </div>
+  <button id="consoleToggle">콘솔 토글</button>
+  <div id="consolePanel"></div>
   <!-- 라이브러리 -->
   <!-- <script src="build.js"></script> -->
   <!-- <script src="js/themeManager.js"></script> -->
@@ -41,6 +86,51 @@
   <script src="js/libs/jsflCommands.js"> </script>
   <!-- 내 코드 -->
   <script src="js/index.js"> </script>
+  <script>
+    // 콘솔 기록용
+    (function () {
+      const panel = document.getElementById('consolePanel');
+      const toggle = document.getElementById('consoleToggle');
+
+      // 토글 동작
+      toggle.addEventListener('click', () => {
+        panel.style.display = panel.style.display === 'none' ? 'block' : 'none';
+      });
+
+      // 원본 콘솔 메서드 저장
+      const orig = {
+        log: console.log,
+        info: console.info,
+        warn: console.warn,
+        error: console.error
+      };
+
+      // 로그 출력 함수
+      function appendLog(level, args) {
+        const entry = document.createElement('div');
+        entry.className = 'log-entry ' + level;
+        const time = new Date().toLocaleTimeString();
+        entry.textContent = `[${time}] ${args.map(a =>
+          typeof a === 'object' ? JSON.stringify(a) : a
+        ).join(' ')}`;
+        panel.appendChild(entry);
+        panel.scrollTop = panel.scrollHeight;
+      }
+
+      // 각 레벨별로 감싸기
+      ['log', 'info', 'warn', 'error'].forEach(level => {
+        console[level] = function (...args) {
+          appendLog(level, args);
+          orig[level].apply(console, args);
+        };
+      });
+
+      // uncaught error 포착
+      window.addEventListener('error', e => {
+        appendLog('error', [e.message + ' (' + e.filename + ':' + e.lineno + ')']);
+      });
+    })();
+  </script>
 </body>
 
 </html>
